# Nexus

./: .env.example  .gitignore  COLLECTION_SELECTOR_REDESIGN.md  Dockerfile  GOOGLE_DRIVE_CONFIG.md  GOOGLE_DRIVE_SETUP.md  README.md  REDESIGN_COMPARISON.md  build-tauri.sh  compose.yaml  index.html  package-lock.json  package.json  run-tauri.sh  tailwind.config.js  vite.config.ts
.claude/: settings.local.json
.github/workflows/: auto-release.yml  bump-version.yml  release.yml
scripts/: convert-logo.js  download-logos.js  generate-icons.js  install.sh  launcher.sh
src/: App.tsx  AppContainer.tsx  AppRouter.tsx  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: google_drive.rs  lib.rs
src/components/: AICard.tsx  AddToCollectionModal.tsx  AddToolCard.tsx  AddToolModal.tsx  CategoryFilter.tsx  CategoryFilterButton.tsx  CollectionSelector.backup.tsx  CollectionSelector.redesigned.tsx  CollectionSelector.tsx  ConfirmDialog.tsx  ContextMenu.tsx  DeleteConfirmModal.tsx  ErrorBoundary.tsx  FloatingMenu.tsx  GoogleDriveButton.tsx  GoogleDriveModal.tsx  HomeButton.tsx  ImportExportPanel.tsx  LanguageToggle.tsx  LoadingBar.tsx  ManageCollectionsModal.tsx  MultiSelect.tsx  MultiSelectToolbar.tsx  MyWorkspaceButton.tsx  RoleSelectorFAB.tsx  RoleSelectorModal.tsx  SchoolButton.tsx  SearchBar.tsx  SettingsSection.tsx  SingleSelect.tsx  SingleSelectDemo.tsx  SingleSelectDropdown.tsx  TemplateSelector.tsx  ThemeToggle.tsx  TitleBar.tsx  UnifiedHeader.tsx  UpdateChecker.tsx
src/data/: aiData.ts  subjectColors.ts  templateMappings.ts
src/hooks/: useCollections.ts  useDebounce.ts  useSchoolData.ts
src/i18n/: config.ts
src/pages/: GoogleDrivePage.tsx  MyWorkspace.tsx  School.tsx  Settings.tsx
src/services/: appLauncher.ts
src/types/: collection.ts  school.ts  tool.ts
src/utils/: configExport.ts  driveUtils.tsx  logger.ts  logoUtils.ts  (+1 more)
(+16 files in other folders)
